# oubon_mailbot

./: .dockerignore  .env  .env.bak  .env.example  .env.shopify.template  .gitignore  CLAUDE.md  DASHBOARD_FIXED.md  DEPLOYMENT_STATUS.md  Dockerfile  ENHANCED_INTELLIGENCE_STATUS.md  INTELLIGENCE_ENGINE_README.md  PRODUCT_SEARCH_GUIDE.md  README.md  SHOPIFY_API_SETUP.md  SHOPIFY_SETUP_COMPLETE.md  dev.sh  diagnose_shopify_token.py  diagnose_system.py  docker-compose.yml  main.py  main.py.bak  pyproject.toml  render.yaml  requirements.txt  run_email_check.py  setup_shopify_theme.py  shopify_header_nav_snippet.liquid  test_affiliate_api.py  test_aliexpress_api.py  test_aliexpress_full_access.py  test_deployment.py  test_direct_intelligence.py  test_ds_api_simple.py  test_hybrid_replies.py  test_multi_niche.py  test_new_system.py  test_production_shopify.py  test_real_data.py  test_scoring_fix.py  (+6 more)
.cursorrules/: .cursorrules
.secrets/: credentials.json  gmail_token.json
app/: ads_inventory.py  ai_client.py  ai_reply.py  analytics.py  business_hours.py  context.py  cooldown.py  database.py  db.py  email_processor.py  gmail_client.py  gmail_watch.py  market_bot.py  models.py  oubonshop_policy.py  rate_limit.py  refund_processor.py  replies_log.py  research_api.py  response_cache.py  rules.py  scheduler.py  security.py  settings.py  shopify_client.py  slack_notifier.py  smart_reply.py  sourcing_bot.py  store_design.py  store_registry.py  templates.py  test_shopify.py  time_utils.py
data/: mailbot.db  mailbot.db-shm  mailbot.db-wal  orders.json  rules.json  templates.json
(+181 files in other folders)
